<resources>
    <string name="app_name">MovieAppProject</string>


    <string name="my_movie_list">My Movies List</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="update_movie">Update Movie</string>
    <string name="show_movie">Show Movie</string>

    <string name="settings">Settings</string>
    <string name="menu_bar_name">Movie List</string>
    <string name="drawer_movie_open">Open Movie</string>
    <string name="drawer_movie_close">Close Movie</string>
    <string name="delete_text">Enter MOVIE List Number</string>
    <string name="update_text">Enter MOVIE Name</string>
    <string name="show_movie_information">Show</string>
    <string name="update_movie_information">Update</string>


    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="year_hint">Year</string>

    <string name="action_text">Action</string>
    <string name="horror_text">Horror</string>
    <string name="comedy_text">Comedy</string>
    <string name="drama_text">Drama</string>
    <string name="thriller_text">Thriller</string>
    <string name="western_text">Western</string>

    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="button_done">Done</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="edit_totalNumber">Total</string>
    <string name="count_hint">Count</string>
    <string name="add_new_movie">Add a New Movie</string>
    <string name="add_first_movie">"Add first Movie"</string>
    <string name="title_activity_movie_new">MovieNewActivity</string>



    <string name="detail_title">TITLE :</string>
    <string name="detail_category">CATEGORY :</string>
    <string name="detail_year">YEAR : :</string>
    <string name="detail_description">DESCRIPTION :</string>
</resources>