<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutMenu7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_color"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/title_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/year_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="@+id/edit_title"
                    app:layout_constraintTop_toBottomOf="@+id/edit_title" />

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/description_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="@+id/edit_year"
                    app:layout_constraintTop_toBottomOf="@+id/edit_year" />

                <CheckBox
                    android:id="@+id/checkBox_action"
                    android:layout_width="87dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/action_text"
                    app:layout_constraintStart_toStartOf="@+id/checkBox_horror"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_horror" />

                <CheckBox
                    android:id="@+id/checkBox_horror"
                    android:layout_width="87dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/horror_text"
                    app:layout_constraintStart_toStartOf="@+id/edit_description"
                    app:layout_constraintTop_toBottomOf="@+id/edit_description" />

                <CheckBox
                    android:id="@+id/checkBox_comedy"
                    android:layout_width="87dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/comedy_text"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox_thriller"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_thriller" />

                <CheckBox
                    android:id="@+id/checkBox_drama"
                    android:layout_width="87dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/drama_text"
                    app:layout_constraintStart_toStartOf="@+id/checkBox_action"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_action" />

                <CheckBox
                    android:id="@+id/checkBox_thriller"
                    android:layout_width="87dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/thriller_text"
                    app:layout_constraintEnd_toEndOf="@+id/edit_description"
                    app:layout_constraintTop_toBottomOf="@+id/edit_description" />

                <CheckBox
                    android:id="@+id/checkBox_western"
                    android:layout_width="87dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/western_text"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox_comedy"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_comedy" />

                <Button
                    android:id="@+id/button_ok"
                    android:layout_width="143dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="64dp"
                    android:hint="@string/ok_button"
                    android:textAlignment="gravity"
                    android:textColorHint="#CE0FEF"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.176"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_drama" />

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="143dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="32dp"
                    android:hint="@string/cancel_button"
                    android:textAlignment="gravity"
                    android:textColorHint="#CE0FEF"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/button_ok"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/button_ok"
                    app:layout_constraintTop_toBottomOf="@+id/button_ok"
                    app:layout_constraintVertical_bias="0.118" />

                <ImageView
                    android:id="@+id/imageViewAdd"
                    android:layout_width="63dp"
                    android:layout_height="67dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/edit_year"
                    app:layout_constraintTop_toTopOf="@+id/edit_title"
                    app:layout_constraintVertical_bias="0.55"
                    app:srcCompat="@drawable/add_photo_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.drawerlayout.widget.DrawerLayout>