<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutMenu6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_color"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="132dp"
                    android:layout_marginEnd="112dp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView_title"
                    app:layout_constraintTop_toBottomOf="@+id/textView_title" />

                <TextView
                    android:id="@+id/textView_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView_year"
                    app:layout_constraintTop_toBottomOf="@+id/textView_year" />

                <TextView
                    android:id="@+id/textView_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    android:text="@string/action_text"
                    app:layout_constraintStart_toStartOf="@+id/textView_description"
                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />

                <TextView
                    android:id="@+id/textView_comedy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    android:text="@string/comedy_text"
                    app:layout_constraintStart_toStartOf="@+id/textView_description"
                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />

                <TextView
                    android:id="@+id/textView_horror"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    android:text="@string/horror_text"
                    app:layout_constraintStart_toStartOf="@+id/textView_description"
                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />

                <TextView
                    android:id="@+id/textView_western"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    android:text="@string/western_text"
                    app:layout_constraintStart_toStartOf="@+id/textView_description"
                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />

                <TextView
                    android:id="@+id/textView_thriller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    android:text="@string/thriller_text"
                    app:layout_constraintStart_toStartOf="@+id/textView_description"
                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />

                <TextView
                    android:id="@+id/textView_drama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    android:text="@string/drama_text"
                    app:layout_constraintStart_toStartOf="@+id/textView_description"
                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="96sp"
                    android:layout_height="42dp"
                    android:layout_marginBottom="176dp"
                    android:hint="@string/button_delete"
                    android:textAlignment="gravity"
                    android:textColorHint="#CE0FEF"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/button_edit"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/button_edit" />

                <Button

                    android:id="@+id/button_edit"
                    android:layout_width="96dp"
                    android:layout_height="42dp"
                    android:layout_marginBottom="24dp"
                    android:hint="@string/button_edit"
                    android:textAlignment="gravity"
                    android:textColorHint="#CE0FEF"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/button_delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_comedy"
                    app:layout_constraintVertical_bias="0.906" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="112dp"
                    android:layout_marginTop="132dp"
                    android:text="@string/detail_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/textView_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="152dp"
                    android:text="@string/detail_category"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/button_edit"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/detail_description"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/detail_year"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/deletedanim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Movie is deleted"
                    tools:layout_editor_absoluteX="169dp"
                    tools:layout_editor_absoluteY="572dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>