<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutMenu9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_update"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="707dp"
            android:background="@color/main_color"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/update_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="128dp"
                    android:ems="10"
                    android:hint="@string/title_hint"
                    android:inputType="textPersonName"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/update_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/year_hint"
                    android:inputType="textPersonName"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/update_title"
                    app:layout_constraintTop_toBottomOf="@+id/update_title" />

                <EditText
                    android:id="@+id/update_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/description_hint"
                    android:inputType="textPersonName"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/update_year"
                    app:layout_constraintTop_toBottomOf="@+id/update_year" />


                <Button
                    android:id="@+id/button_update_information"
                    android:layout_width="121dp"
                    android:layout_height="38dp"
                    android:layout_marginBottom="92dp"
                    android:gravity="center"
                    android:text="@string/update_movie_information"
                    android:textAlignment="gravity"
                    android:textColorHint="#CE0FEF"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/update_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>